# vulkan-playground

./: .gitattributes  LICENSE  README.md
VulkanPlayground/: .gitignore  CMakeLists.txt  main.cpp  run.ps1  vcpkg.json
VulkanPlayground/Renderer/: RenderBackend.cpp  RenderBackend.h  RenderCommon.h
VulkanPlayground/shaders/: colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  sky.comp  tex_image.frag
VulkanPlayground/src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
