# Add source to this project's executable.
add_executable(${PROJECT_NAME}
    main.cpp
    vk_types.h
    vk_initializers.cpp
    vk_initializers.h
    vk_images.h
    vk_images.cpp
    vk_descriptors.h
    vk_descriptors.cpp
    vk_pipelines.h
    vk_pipelines.cpp
    vk_engine.h
    vk_engine.cpp
    vk_loader.h
    vk_loader.cpp
    camera.cpp
    camera.h
)
